--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -30,8 +30,8 @@
     document.addEventListener('DOMContentLoaded', ()=> {
         $(document).ready(()=> {
             const background = document.querySelector('.meta')
-            const choices = ['#86baaf', '#ffca52']
-            const randomNumber = Math.floor(Math.random()*2)
+            const choices = ['#86baaf', '#ffca52', '#e4ded2', '#dcd1c1', '#e2d8a5', '#92a1a6', '#fff2ce']
+            const randomNumber = Math.floor(Math.random()*7)
             const selection = choices[randomNumber]
             background.style.background = selection
             var replystatus = 'closed'
@@ -180,7 +180,7 @@
                         {{ form.content }}
                         <input type="hidden" name="parent_id" value="{{ comment.id }}">
                         <div style="display: flex; justify-content: right; gap: 12px;">
-                            <button class="modal-btn" type="submit" name="submitcomment" style="padding: 4px 7px;">Post Reply</button>
+                            <button class="modal-btn" type="submit" name="submitcomment" style="padding: 4px 7px; background-color: #FAFAFA;">Post Reply</button>
                             <button class="closereply" type="button">Cancel</button>
                         </div>
                     </div>
