ux colorscheme mod

--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -180,7 +180,7 @@
                         {{ form.content }}
                         <input type="hidden" name="parent_id" value="{{ comment.id }}">
                         <div style="display: flex; justify-content: right; gap: 12px;">
-                            <button class="modal-btn" type="submit" name="submitcomment" style="padding: 4px 7px; background-color: #FAFAFA;">Post Reply</button>
+                            <button class="modal-btn" type="submit" name="submitcomment" style="padding: 4px 7px; background-color: #FAFAFA; font-weight: 800;">Post Reply</button>
                             <button class="closereply" type="button">Cancel</button>
                         </div>
                     </div>
