--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -227,7 +227,7 @@
     font-weight: bold;
     color: #000000;
     /* background: #44bb44; */
-    background: #03bb0d;
+    background: #ff9575;
     border: none;
     /* border: #b8b8b8 1px solid; */
     border-radius: 4px;
@@ -270,7 +270,7 @@ textarea {
     font-family: CrimsonPro;
 }
 .closereply {
-    border: 1px #000000 solid;
+    border: none;
     border-radius: 4px;
     background-color: #073944;
     color: #ffffff;
@@ -283,7 +283,7 @@ textarea {
 }
 .replywarning {
     background: #000;
-    border: 2px #f54748 solid;
+    border: 2px #f25c05 solid;
     width: 100%;
     margin: 7px 0;
     display: flex;
@@ -293,6 +293,7 @@ textarea {
 .replywarning p {
     font: CrimsonPro 14px bold;
     padding: 7px 2px;
+    color: #f25c05;
 }
 
 /* Tablet view */
