--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -30,8 +30,8 @@
     document.addEventListener('DOMContentLoaded', ()=> {
         $(document).ready(()=> {
             const background = document.querySelector('.meta')
-            const choices = ['#86baaf', '#ffca52', '#e4ded2', '#dcd1c1', '#e2d8a5', '#92a1a6', '#fff2ce']
-            const randomNumber = Math.floor(Math.random()*7)
+            const choices = ['#86baaf', '#ffca52', '#e4ded2', '#dcd1c1', '#e2d8a5', '#92a1a6', '#fff2ce', '#ffc16c']
+            const randomNumber = Math.floor(Math.random()*8)
             const selection = choices[randomNumber]
             background.style.background = selection
             var replystatus = 'closed'
