--- a/core/templates/core/error.html
+++ b/core/templates/core/error.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id="errContainer">
-            <img class="logoimg" src="{% static 'core/media/lbwhite.png' %}" alt="logo">           
+            <img class="logoimg" src="{% static 'core/media/lbwhite.svg' %}" alt="logo" style="width: auto; height: 20px;">           
             {% block page %}
             {% endblock page %}
         </div>
