--- a/store/templates/store/catalogue.html
+++ b/store/templates/store/catalogue.html
@@ -32,12 +32,6 @@
 {% endblock navmenu %}
 
 {% block mobilemenu %}
-<a href="{% url 'core:events' %}">
-    <div class="mobile-menu-item">
-        <img src="{% static 'core/media/tickets.svg' %}"></img>
-        <span>Tickets</span>
-    </div>
-</a>
 <a href="{% url 'core:blog' %}">
     <div class="mobile-menu-item">
         <img src="{% static 'core/media/blog.svg' %}"></img>
@@ -53,7 +47,7 @@
 <a href="#">
     <div class="mobile-menu-item">
         <img src="{% static 'core/media/shop.svg' %}"></img>
-        <span>Shop</span>
+        <span>Store</span>
     </div>
 </a>
 {% endblock mobilemenu %}
