--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -94,7 +94,7 @@
 {% block navmenu %}
 <a id="menuactive">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
-<a href="{% url 'store:catalogue' %}">SHOP</a>
+<a href="{% url 'store:catalogue' %}">STORE</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
