--- a/store/templates/store/catalogue.html
+++ b/store/templates/store/catalogue.html
@@ -28,7 +28,7 @@
 {% block navmenu %}
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
-<a href="#">SHOP</a>
+<a href="#">STORE</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
