--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -56,16 +56,10 @@
 <!-- <a href="{% url 'core:index' %}">HOME</a> -->
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
-<a href="{% url 'store:catalogue' %}">SHOP</a>
+<a href="{% url 'store:catalogue' %}">STORE</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
-<!-- <a href="{% url 'core:events' %}">
-    <div class="mobile-menu-item">
-        <img src="{% static 'core/media/tickets.svg' %}"></img>
-        <span>Tickets</span>
-    </div>
-</a> -->
 <a href="{% url 'core:blog' %}">
     <div class="mobile-menu-item">
         <img src="{% static 'core/media/blog.svg' %}"></img>
