--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -12,7 +12,7 @@
 <!-- <a href="{% url 'core:index' %}" >HOME</a> -->
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a id="menuactive">PODCAST</a>
-<a href="{% url 'store:catalogue' %}">SHOP</a>
+<a href="{% url 'store:catalogue' %}">STORE</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
